--- a/src/swap-exchange/swap-exchange.csproj
+++ b/src/swap-exchange/swap-exchange.csproj
@@ -9,6 +9,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AElf.CSharp.Core" Version="1.0.0" />
+        <PackageReference Include="AElf.Types" Version="1.1.1-18963" />
         <PackageReference Include="Quartz" Version="3.4.0" />
         <PackageReference Include="Volo.Abp.Autofac" Version="4.4.3" />
         <PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="4.4.3" />
