--- a/src/swap-exchange/appsettings.json
+++ b/src/swap-exchange/appsettings.json
@@ -18,6 +18,7 @@
     "TargetToken": "USDTE",
     "LargeCurrencyTokens": "BTC,ETH,ELF,USDT",
     "BatchAmount":10,
-    "FeeRate": "0.003"
+    "FeeRate": "0.003",
+    "ExecutionPeriod": 1
   }
 }
