Re-generate migration file.

--- a/src/Awaken.Scripts.Dividends/appsettings.json
+++ b/src/Awaken.Scripts.Dividends/appsettings.json
@@ -3,7 +3,7 @@
     "Configuration": "127.0.0.1"
   },
   "ConnectionStrings": {
-    "Default": "Server=localhost;Port=3306;Database=SwapExchangeAbp;Uid=root;Pwd=123456;"
+    "Default": "Server=localhost;Port=3306;Database=AwakenDividends;Uid=root;Pwd=aelftest;"
   },
   "AElfNode": {
     "Url": "http://18.163.40.175:8000"
@@ -14,7 +14,7 @@
     "SlipPointPercent": 5,
     "SwapContractAddress": "2vPUxuRhLPwsqposUSqHvch7Z3wwKFLS22x9QxrwhFwR12R5iM",
     "LpTokenContractAddresses": "hg7hFigUZ6W3gLreo1bGnpAQTQpGsidueYBScVpzPAi81A2AA",
-    "SwapToolContractAddress": "UYdd84gLMsVdHrgkr3ogqe1ukhKwen8oj32Ks4J1dg6KH9PYC ",
+    "SwapToolContractAddress": "UYdd84gLMsVdHrgkr3ogqe1ukhKwen8oj32Ks4J1dg6KH9PYC",
     "TargetToken": "USDTE",
     "LargeCurrencyTokens": "BTC,ETH,ELF,USDT",
     "BatchAmount":10,
