--- a/src/Awaken.Scripts.Dividends/Awaken.Scripts.Dividends.csproj
+++ b/src/Awaken.Scripts.Dividends/Awaken.Scripts.Dividends.csproj
@@ -32,9 +32,9 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.16">
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.2">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-            <PrivateAssets>compile; contentFiles; build; buildMultitargeting; buildTransitive; analyzers; native</PrivateAssets>
+            <PrivateAssets>compile; build; native; contentfiles; analyzers; buildtransitive</PrivateAssets>
         </PackageReference>
     </ItemGroup>
     <ItemGroup>
