--- a/src/Awaken.Scripts.Dividends/Awaken.Scripts.Dividends.csproj
+++ b/src/Awaken.Scripts.Dividends/Awaken.Scripts.Dividends.csproj
@@ -11,7 +11,7 @@
 
     <ItemGroup>
         <PackageReference Include="AElf.CSharp.Core" Version="1.0.0" />
-        <PackageReference Include="AElf.Types" Version="1.1.1-18963" />
+        <PackageReference Include="AElf.Types" Version="1.0.0" />
         <PackageReference Include="Quartz" Version="3.4.0" />
         <PackageReference Include="Volo.Abp.Autofac" Version="5.2.0" />
         <PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="5.2.0" />
