--- a/src/Awaken.Scripts.Dividends/Awaken.Scripts.Dividends.csproj
+++ b/src/Awaken.Scripts.Dividends/Awaken.Scripts.Dividends.csproj
@@ -10,8 +10,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="AElf.CSharp.Core" Version="1.0.0" />
-        <PackageReference Include="AElf.Types" Version="1.0.0" />
+        <PackageReference Include="AElf.CSharp.Core" Version="1.1.1-18963" />
+        <PackageReference Include="AElf.Types" Version="1.1.1-18963" />
+        <PackageReference Include="AElf.Client" Version="1.1.0" />
+    </ItemGroup>
+
+    <ItemGroup>
         <PackageReference Include="Quartz" Version="3.4.0" />
         <PackageReference Include="Volo.Abp.Autofac" Version="5.2.0" />
         <PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="5.2.0" />
@@ -27,7 +31,6 @@
         <PackageReference Include="Volo.Abp.BackgroundWorkers" Version="5.2.0" />
         <PackageReference Include="Volo.Abp.BackgroundJobs.Abstractions" Version="5.2.0" />
         <PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" Version="5.0.*" />
-        <PackageReference Include="AElf.Client" Version="1.1.0" />
         <PackageReference Include="Volo.Abp.EntityFrameworkCore.MySQL" Version="5.2.0" />
         <PackageReference Include="Volo.Abp.AuditLogging.EntityFrameworkCore" Version="5.2.0" />
     </ItemGroup>
