add backgroundjob ref

--- a/src/Awaken.Scripts.Dividends/appsettings.json
+++ b/src/Awaken.Scripts.Dividends/appsettings.json
@@ -3,7 +3,7 @@
     "Configuration": "127.0.0.1"
   },
   "ConnectionStrings": {
-    "Default": "Server=localhost;Port=3306;Database=AwakenDividends;Uid=root;Pwd=aelftest;"
+    "Default": "Server=localhost;Port=3306;Database=DividendScript;Uid=root;Pwd=12345678;"
   },
   "AElfNode": {
     "Url": "http://18.163.40.175:8000"
