--- a/src/Awaken.Scripts.Dividends/Awaken.Scripts.Dividends.csproj
+++ b/src/Awaken.Scripts.Dividends/Awaken.Scripts.Dividends.csproj
@@ -16,10 +16,17 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Quartz" Version="3.4.0" />
-        <PackageReference Include="Volo.Abp.Autofac" Version="5.2.0" />
-        <PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="5.2.0" />
-        <PackageReference Include="Volo.Abp.EntityFrameworkCore.MySQL" Version="5.2.0" />
+<!--        <PackageReference Include="Quartz" Version="3.4.0" />-->
+        <PackageReference Include="Volo.Abp.Autofac" Version="5.2.2" />
+        <PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="5.2.2" />
+        <PackageReference Include="Volo.Abp.EntityFrameworkCore.MySQL" Version="5.2.2" />
+        <PackageReference Include="Volo.Abp.BackgroundJobs" Version="5.2.2" />
+        <PackageReference Include="Volo.Abp.EntityFrameworkCore.MySQL" Version="5.2.2" />
+        <PackageReference Include="Volo.Abp.AuditLogging.EntityFrameworkCore" Version="5.2.2" />
+        <PackageReference Include="Volo.Abp.BackgroundWorkers" Version="5.2.2" />
+        <PackageReference Include="Volo.Abp.BackgroundJobs.Domain" Version="5.2.2" />
+        <PackageReference Include="Volo.Abp.BackgroundJobs.EntityFrameworkCore" Version="5.2.2" />
+        <PackageReference Include="Volo.Abp.BackgroundJobs" Version="5.2.2" />
     </ItemGroup>
 
     <ItemGroup>
@@ -28,11 +35,8 @@
         <PackageReference Include="Serilog.Sinks.Async" Version="1.4.0" />
         <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
         <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
-        <PackageReference Include="Volo.Abp.BackgroundWorkers" Version="5.2.0" />
-        <PackageReference Include="Volo.Abp.BackgroundJobs.Abstractions" Version="5.2.0" />
         <PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" Version="5.0.*" />
-        <PackageReference Include="Volo.Abp.EntityFrameworkCore.MySQL" Version="5.2.0" />
-        <PackageReference Include="Volo.Abp.AuditLogging.EntityFrameworkCore" Version="5.2.0" />
+        
     </ItemGroup>
 
     <ItemGroup>
