add path check before swap

--- a/src/Awaken.Scripts.Dividends/appsettings.json
+++ b/src/Awaken.Scripts.Dividends/appsettings.json
@@ -18,7 +18,12 @@
     "TargetToken": "USDTE",
     "LargeCurrencyTokens": "BTC,ETH,ELF,USDT",
     "BatchAmount":10,
-    "FeeRate": "0.003",
-    "ExecutionPeriod": 1
+    "FeeRate": "0.003"
+  },
+  "Script": {
+    "FirstExecutionTime": "2022/07/14/23:59:59",
+    "FixedTermSeconds": 86400,
+    "ExecuteOffsetSeconds": -1,
+    "IsNewReward": false
   }
 }
